Generics/Code11_error_report.txt
javac errors for Code11.java 
Code11.java:10: error: method compareLists in class Code11 cannot be applied to given types;
        if (compareLists(list1, list2)) {
            ^
  required: List<T>,List<T>
  found: List<Integer>,List<Float>
  reason: inferred type does not conform to equality constraint(s)
    inferred: Float
    equality constraints(s): Float,Integer
  where T is a type-variable:
    T extends Object declared in method <T>compareLists(List<T>,List<T>)
1 error
 
============================================================================= 
ExtendJ errors for Code11.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code11.java:10: error: no method named compareLists(java.util.List<java.lang.Integer>, java.util.List<java.lang.Float>) in Code11 matches. However, there is a method compareLists(java.util.List<T>, java.util.List<T>)
 
============================================================================= 
Eclipse ECJ errors for Code11.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code11.java (at line 10)
	if (compareLists(list1, list2)) {
	    ^^^^^^^^^^^^
The method compareLists(List<T>, List<T>) in the type Code11 is not applicable for the arguments (List<Integer>, List<Float>)
----------
1 problem (1 error)
